# johnjosephhorton.github.io

./: .#Makefile  .env  .gitignore  Makefile  README.md  awards.csv  basic_info.csv  citations.csv  coauthors.csv  code.csv  create_website.py  education.csv  index.html  jobs.csv  logs.csv  media.csv  papers.csv  people.csv  pull_data.py  pyproject.toml  research.html  research.md  reviewing.csv  service.csv  slides.csv  speculative_gpt_thoughts.html  speculative_gpt_thoughts.md  speculative_gpt_thoughts.md~  style.css  talks.csv  test.md  twitter_thread.csv  versions.csv  video.csv  website.md
data/: my_database.db
papers/: hot_towel.code.html  hot_towel.slides.html  minimum_wage.slides.html  minimum_wage.video.html  search_ad_exp.slides.html  uber_disclosure.html
templates/: cv.md  research.md  template.html  website.md
