[tool.poetry]
name = "johnjosephhorton-github-io"
version = "0.1.0"
description = ""
authors = ["John Horton <john.joseph.horton@gmail.com>"]
readme = "README.md"
packages = [{include = "johnjosephhorton"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.32.3"
openpyxl = "^3.1.5"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
